--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -9,8 +9,10 @@
     <!-- https://ncses.nsf.gov/pubs/nsb20212/participation-of-demographic-groups-in-stem -->
   </head>
   <body>
+    <!-- line chart -->
+    <div id="line-chart"></div>
     <!-- Create a container for the chart -->
-    <svg width="400" height="200" style="border: 1px solid #777;"></svg>
+    <!-- <svg width="400" height="200" style="border: 1px solid #777;"></svg> -->
  </body>
 </html>
 </html>
