--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -7,10 +7,21 @@
     <script type="text/javascript" src="scripting.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet"/>
     <!-- https://ncses.nsf.gov/pubs/nsb20212/participation-of-demographic-groups-in-stem -->
+    <style>
+      #chart {
+          width: 100%;
+          max-width: 10 00px; /* Set a max-width if needed */
+          margin: 0 auto; /* Center the chart */
+
+          .axis text {
+            font-size: 14px; /* Initial font size */
+        }
+      }
+  </style>
   </head>
   <body>
     <!-- line chart -->
-    <div id="line-chart"></div>
+    <div id="chart"></div>
     <!-- Create a container for the chart -->
     <!-- <svg width="400" height="200" style="border: 1px solid #777;"></svg> -->
  </body>
