--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -16,6 +16,15 @@
           .axis text {
             font-size: 14px; /* Initial font size */
         }
+        .line {
+          transition: 150ms ease-in-out all;
+          display: block;
+          padding: 10px;
+          stroke-linecap: round;
+        }
+        svg:has(.hover:hover) .hover:not(:hover) {
+          opacity: 0.3;
+        }
       }
   </style>
   </head>
