--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>My Bar Chart</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="scripting.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet"/>
     <!-- https://ncses.nsf.gov/pubs/nsb20212/participation-of-demographic-groups-in-stem -->
