--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -31,37 +31,38 @@
       }
       .text-container {
         display: flex;
-        margin: 20px auto;
-        justify-content: space-around;
       }
       .text-container p {
         font-size: 14px;
       }
-      .group1, .group2 {
-        margin-top: 40px;
+      .groups {
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        border: 1px solid red;
       }
-      p {
-        padding: 40px auto;
-      }
-      p:hover {
-        text-decoration: underline;
+
+      @media screen and (max-width: 768px) {
+        .groups {
+          flex-direction: column;
+        }
       }
   </style>
   </head>
   <body>
-    <!-- line chart -->
-    
-    <div id="chart">
-    </div>
+    <div id="chart"></div>
     <div class="text-container">
-      <div class="group1">
-        <p>Computer and math scientists</p>
-        <p>Biology, agricultural, and environmental life scientists</p>
-        <p>Physical scientist</p>
-      </div>
-      <div class="group2">
-        <p>Social scientists</p>
-        <p>Engineers</p>
+      <div class="groups">
+        <div class="group1">
+          <p>Computer and math scientists</p>
+          <p>Biology, agricultural, and environmental life scientists</p>
+          <p>Physical scientist</p>
+        </div>
+        <div class="group2">
+          <p>Social scientists</p>
+          <p>Engineers</p>
+        </div>
       </div>
     </div>
  </body>
