--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -47,7 +47,7 @@
         justify-content: flex-start;
         gap: 50px;
       }
-      .legend {
+      .legend-1 {
         transition: 150ms ease-in-out all;
         cursor: pointer;
       }
