--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -83,7 +83,7 @@
   </style>
   </head>
   <body>
-    <h1>Women in STEM from 1993 to 2019</h1>
+    <h1>Women in STEM from 1993 to 2019 in the United States</h1>
     <div id="chart"></div>
     <div class="text-container">
       <div class="groups">
