--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -88,47 +88,47 @@
     <div class="text-container">
       <div class="groups">
         <div class="group1">
-          <div class="legend-1">
+          <div class="legend-1 cm-text">
             <div class="color-line">
               <svg height="10" width="10">
                 <line x1="0" y1="0" x2="10" y2="0" style="stroke:steelblue;stroke-width:5; z-index:0;"></line>
               </svg>
             </div>
-            <p class="legend cm-text">Computer and math scientists</p>
+            <p class="legend">Computer and math scientists</p>
           </div>
-          <div class="legend-1">
+          <div class="legend-1 bae-text">
             <div class="color-line">
               <svg height="10" width="10">
                 <line x1="0" y1="0" x2="10" y2="0" style="stroke:#BB77A7;stroke-width:5; z-index:0;"></line>
               </svg>
             </div>
-            <p class="legend bae-text">Biology, agricultural, and environmental life scientists</p>
+            <p class="legend">Biology, agricultural, and environmental life scientists</p>
           </div>
-          <div class="legend-1">
+          <div class="legend-1 p-text">
             <div class="color-line">
               <svg height="10" width="10">
                 <line x1="0" y1="0" x2="10" y2="0" style="stroke:indigo;stroke-width:5; z-index:0;"></line>
               </svg>
             </div>
-            <p class="legend p-text">Physical scientist</p>
+            <p class="legend">Physical scientist</p>
           </div>
         </div>
         <div class="group2">
-          <div class="legend-1">
+          <div class="legend-1 s-text">
             <div class="color-line">
               <svg height="10" width="10">
                 <line x1="0" y1="0" x2="10" y2="0" style="stroke:mediumorchid;stroke-width:5; z-index:0;"></line>
               </svg>
             </div>
-            <p class="legend s-text">Social scientists</p>
+            <p class="legend">Social scientists</p>
           </div>
-          <div class="legend-1">
+          <div class="legend-1 e-text">
             <div class="color-line">
               <svg height="10" width="10">
                 <line x1="0" y1="0" x2="10" y2="0" style="stroke:pink;stroke-width:5; z-index:0;"></line>
               </svg>
             </div>
-            <p class="legend e-text">Engineers</p>
+            <p class="legend">Engineers</p>
           </div>
           <!-- next do Employed women with highest degree in an S&E field, by race or ethnicity and field of degree: 2019 -->
         </div>
