--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -25,9 +25,12 @@
           padding: 10px;
           stroke-linecap: round;
         }
-        svg:has(.hover:hover) .hover:not(:hover) {
+        /* svg:has(.line:hover) .line:not(:hover) {
           opacity: 0.2;
-        }
+        } */
+        /* .line:hover {
+          stroke-width: 5;
+        } */
       }
       h1 {
         text-align: center;
