--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -143,6 +143,7 @@
             <p class="legend">Engineers</p>
           </div>
           <!-- next do Employed women with highest degree in an S&E field, by race or ethnicity and field of degree: 2019 -->
+          <!-- Actually do this next https://www.nsf.gov/statistics/2017/nsf17310/digest/fod-women/computer-sciences.cfm -->
         </div>
       </div>
     </div>
