--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -122,7 +122,7 @@
                 <line x1="0" y1="0" x2="10" y2="0" style="stroke:indigo;stroke-width:5; z-index:0;"></line>
               </svg>
             </div>
-            <p class="legend">Physical scientist</p>
+            <p class="legend">Physical scientists</p>
           </div>
         </div>
         <div class="group2">
