--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -25,7 +25,6 @@
           padding: 10px;
           stroke-linecap: round;
         }
-
         /* svg:has(.line:hover) .line:not(:hover) {
           opacity: 0.2;
         } */
@@ -58,10 +57,10 @@
       .groups:has(.legend-1:hover) .legend-1:not(:hover) {
         opacity: 0.7;
       }
-      .test {
+      .target {
         opacity: 1;
       }
-      .test2 {
+      .other {
         opacity: 0.2;
       }
       p {
