--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -53,6 +53,7 @@
       .legend-1 {
         transition: 150ms ease-in-out all;
         cursor: pointer;
+        /* padding: 5px; */
       }
       .groups:has(.legend-1:hover) .legend-1:not(:hover) {
         opacity: 0.7;
