--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -53,6 +53,9 @@
       .legend-1 {
         transition: 150ms ease-in-out all;
         cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
         /* padding: 5px; */
       }
       .groups:has(.legend-1:hover) .legend-1:not(:hover) {
@@ -65,17 +68,11 @@
         opacity: 0.2;
       }
       p {
-        padding: 0;
         margin: 0;
       }
       .credit {
         margin: 10px 50px auto 50px;
         font-size: 14px;
-      }
-      .legend-1 {
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
       }
       @media screen and (max-width: 768px) {
         .groups {
@@ -152,6 +149,7 @@
           <!-- https://www.npr.org/sections/money/2014/10/21/357629765/when-women-stopped-coding -->
         </div>
       </div>
+      <svg></svg>
     </div>
  </body>
 </html>
