--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="scripting.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet"/>
     <!-- https://ncses.nsf.gov/pubs/nsb20212/participation-of-demographic-groups-in-stem -->
+    <nav></nav>
     <style>
       #chart {
           width: 100%;
@@ -149,7 +150,7 @@
           <!-- https://www.npr.org/sections/money/2014/10/21/357629765/when-women-stopped-coding -->
         </div>
       </div>
-      <svg></svg>
+      <div id="bar-chart"></div>
     </div>
  </body>
 </html>
