--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -33,6 +33,15 @@
           stroke-width: 5;
         } */
       }
+      #bar-chart {
+        rect {
+          transition: 150ms ease-in-out all;
+          cursor: pointer;
+        }
+        rect:hover {
+          filter: brightness(1.2);
+        }
+      }
       h1 {
         text-align: center;
         font-size: 1em;
