--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -184,7 +184,7 @@
           <!-- https://www.npr.org/sections/money/2014/10/21/357629765/when-women-stopped-coding -->
         </div>
       </div>
-      <h1>Women in Computer Science with degrees from 1995 to 2019 in the United States</h1>
+      <h1>Women in Computer Science degrees from 1995 to 2018 in the United States</h1>
       <div id="bar-chart"></div>
       <div class="b-legend">
         <div class="b-legend-1 bachelors-text bar-text">
