Adding source material

--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -128,7 +128,7 @@
   <body>
     <h1>Women in STEM from 1993 to 2019 in the United States</h1>
     <div id="chart"></div>
-    <p class="credit">Souce(s): National Center for Science and Engineering Statistics, Scientists and Engineers Statistical Data System (SESTAT), 1993–2013, National Survey of College Graduates (NSCG), 2015–19, and Survey of Doctorate Recipients (SDR), 2015–19.</p>
+    <p class="credit">Source(s): National Center for Science and Engineering Statistics, Scientists and Engineers Statistical Data System (SESTAT), 1993–2013, National Survey of College Graduates (NSCG), 2015–19, and Survey of Doctorate Recipients (SDR), 2015–19.</p>
     <div class="text-container">
       <div class="groups">
         <div class="group1">
@@ -186,6 +186,7 @@
       </div>
       <h1>Women with Computer Science degrees from 1995 to 2018 in the United States</h1>
       <div id="bar-chart"></div>
+      <p class="credit">Source(s): Department of Education, National Center for Education Statistics, Integrated Postsecondary Education Data System, Completions Survey, unrevised provisional release data, accessed 14 January 2020.</p>
       <div class="b-legend">
         <div class="b-legend-1 bachelors-text bar-text">
           <svg height="15" width="15">
