--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -101,7 +101,7 @@
       }
       .b-legend {
         cursor: pointer;
-        margin: auto 50px;
+        margin: 20px 50px auto 50px;
       }
       .bar-text {
         transition: 150ms ease-in-out all;
@@ -186,7 +186,8 @@
       </div>
       <h1>Women with Computer Science degrees from 1995 to 2018 in the United States</h1>
       <div id="bar-chart"></div>
-      <p class="credit">Source(s): Department of Education, National Center for Education Statistics, Integrated Postsecondary Education Data System, Completions Survey, unrevised provisional release data, accessed 14 January 2020.</p>
+      <p class="credit">Source(s): Department of Education, National Center for Education Statistics, Integrated Postsecondary Education Data System, Completions Survey, unrevised provisional release data, accessed 14 January 2020; National Science Foundation, National Center for Science and Engineering Statistics. 2017. Women, Minorities, and Persons with Disabilities in Science and Engineering: 2017. Special Report NSF 17-310. Arlington, VA. Available at <a href="https://ncses.nsf.gov/pubs/nsf23315/">www.nsf.gov/statistics/wmpd/</a>.
+      </p>
       <div class="b-legend">
         <div class="b-legend-1 bachelors-text bar-text">
           <svg height="15" width="15">
