--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -126,6 +126,8 @@
   </style>
   </head>
   <body>
+    <!-- Women programmers time line here -->
+    <!-- Ade Lovelace was the first person to publish an algorithm intended to be executed by the first modern computer -->
     <h1>Women in STEM from 1993 to 2019 in the United States</h1>
     <div id="chart"></div>
     <p class="credit">Source(s): National Center for Science and Engineering Statistics, Scientists and Engineers Statistical Data System (SESTAT), 1993–2013, National Survey of College Graduates (NSCG), 2015–19, and Survey of Doctorate Recipients (SDR), 2015–19.</p>
