--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -128,6 +128,9 @@
   <body>
     <!-- Women programmers time line here -->
     <!-- Ade Lovelace was the first person to publish an algorithm intended to be executed by the first modern computer -->
+    <!-- Fix tool tips https://chartio.com/resources/tutorials/how-to-show-data-on-mouseover-in-d3js/ -->
+    <!-- Fix to hover only one point https://medium.com/@kj_schmidt/hover-effects-for-your-scatter-plot-447df80ea116 -->
+    <!-- Fix tool tip https://d3-graph-gallery.com/graph/interactivity_tooltip.html -->
     <h1>Women in STEM from 1993 to 2019 in the United States</h1>
     <div id="chart"></div>
     <p class="credit">Source(s): National Center for Science and Engineering Statistics, Scientists and Engineers Statistical Data System (SESTAT), 1993–2013, National Survey of College Graduates (NSCG), 2015–19, and Survey of Doctorate Recipients (SDR), 2015–19.</p>
