--- a/women-in-coding/index.html
+++ b/women-in-coding/index.html
@@ -127,9 +127,11 @@
   </head>
   <body>
     <p>What happened to women in computing?<br/> 
-      Computing was once considered menial and unimportant job, a women's job. Given so, women made significant, yet often forgotten or overlooked contributions to the industry. <br/>
-      The beginning of modern computing can be traced back to 19th century with Ada Lovelace, the first to create an algorithm executef by a computer.
-      </p>
+      Computing was once considered menial and unimportant job, to put simply a "women's" job. Given so, women made significant, yet often forgotten or overlooked contributions to the industry.<br/>
+      The beginning of modern computing can be traced back to 19th century with Ada Lovelace, the first to create an algorithm executed by a computer.
+    </p>
+    <div id="timeline">
+    </div>
     
     <!-- Women programmers time line here -->
     <!-- Ade Lovelace was the first person to publish an algorithm intended to be executed by the first modern computer -->
